--- a/server/public/cancel.html
+++ b/server/public/cancel.html
@@ -5,8 +5,16 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <section>
-    <p>Forgot to add something to your cart? Shop around then come back to pay!</p>
-  </section>
+
+  <div class="main">
+    <img src="https://cdni.iconscout.com/illustration/premium/thumb/cancel-order-8091835-6506585.png" alt="">
+    <div class="description" >
+
+      <p class="gradient_text">
+        Forgot to add something to your cart? Shop around then come back to pay! if you have any query, please send tha mail to     
+      </p>
+      <a>dpdemo24@gmail.com</a>
+    </div>
+  </div>
 </body>
 </html>
